# docs/swagger.json
@@ -4,6 +4,96 @@
         "contact": {}
     },
     "paths": {
+        "/convert": {
+            "post": {
+                "description": "Convert a word file into pdf",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "multipart/form-data"
+                ],
+                "tags": [
+                    "Converter"
+                ],
+                "summary": "Document converter",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "File that will be converted",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    }
+                }
+            }
+        },
+        "/secret-generator": {
+            "post": {
+                "description": "Generate secret based in the params",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Secret"
+                ],
+                "summary": "Secret Generator",
+                "parameters": [
+                    {
+                        "description": "Lenght of the secret that'll be generated",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/secret.GenerateSecret.Request"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "sl5=wv_X/OK/",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    }
+                }
+            }
+        },
         "/url": {
             "post": {
                 "description": "Shorten a URL using Bitly API",
@@ -30,11 +120,76 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "https://bit.ly/example",
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "error.ApiError": {
+            "type": "object",
+            "properties": {
+                "causes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/error.Causes"
+                    }
+                },
+                "code": {
+                    "type": "integer"
+                },
+                "error": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "error.Causes": {
+            "type": "object",
+            "properties": {
+                "field": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "secret.GenerateSecret.Request": {
+            "type": "object",
+            "properties": {
+                "length": {
+                    "type": "integer"
+                },
+                "letters": {
+                    "type": "boolean"
+                },
+                "numbers": {
+                    "type": "boolean"
+                },
+                "special_characters": {
+                    "type": "boolean"
+                },
+                "uppercase_characters": {
+                    "type": "boolean"
                 }
             }
         }
